[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accmp"
version = "0.0.1"
authors = [
  { name="XXXXX XXXXX", email="XXXXX@XXXXX" },
]
description = "A library for the ACC node embedding model."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/XXXXX/acc-mp-anonymous"
Issues = "https://github.com/XXXXX/acc-mp-anonymous/issues"